# gPAC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT_2025-0611.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.org  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  SEQUENTIAL_FILTFILT_SUMMARY.md  _fair_benchmark.py  cleanup_temp_files.sh  fix_pac_caching.patch  isolated.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  rerun_all_permutation_analyses.py  run_tests.sh  safe_rm.sh  scitex.yaml  setup.py  test_edge_handling_pac_context.py  test_filtfilt_performance.py  test_hres_mres_comparison.py  test_hres_mres_comparison_improved.py  test_pytorch_padding_modes.py  test_quality_improvements_summary.md  test_return_dist.py  test_tensorpac_compatibility.py  upload_to_pypi.sh  verify_hres_mres_bands.py  visualize_filtfilt_math.py
.claude/: settings.json
benchmark/: README.md  gpac_vs_tensorpac_speed_comparison.py  verify_caching_correctness.py
docs/: CHANNEL_HANDLING_GUIDE.md  Makefile  PERFORMANCE_CHARACTERISTICS.md  README.md  SINCNET_IMPLEMENTATION.md  api_reference.md  differentiable_bucketize.md  gpac_tensorpac_correlation_analysis.md  real_world_data_sources.md  sequential_filtfilt_results.md  tensorpac_compatibility.md  tensorpac_frequency_band_handling.md
examples/: 04_advanced_statistical_analysis.py  README.md  RUN_STATUS.md  _README.md  _comparison_with_mngs.py  _performance_demo.py  basic_pac_analysis.py  call_gpac_func.py  create_parallelization_diagram.py  differentiable_bucketize_example.py  example_bandpass_filter.py  example_data_generation.py  example_pac_analysis.py  example_profiler.py  readme_demo.py  readme_demo_edge_mode.py  readme_demo_realworld.py  run_examples.sh  sync_examples_with_source.sh  update_summary.md  v01_mode_comparison.py
manuscript/: main.tex  references.bib
paper/: scitex.py  scitex.yaml
project_management/: AGENT_BULLETIN_BOARD.md  BULLETIN-BOARD.md  CLAUDE_PLAN.md  MANUSCRIPT_OUTLINE.md  OPTIMIZATION_COMPLETE_CHECKLIST.md  OPTIMIZATION_VISUAL_SUMMARY.md  PROGRESS_UPDATE_2025-06-07.md  PROJECT_IMPACT_SUMMARY.md  RELEASE_READINESS_FINAL_20250601.md  SESSION_SUMMARY_20250601_0025.md  TASK_COMPLETION_SUMMARY_2025-06-07.md  USER_PLAN.md  development_plan.md  next_steps-20250529.md  optimization_completion_20250129.md  optimization_results.md  progress-complete-demos-20250130.md  progress-gPAC-examples-20250529.md  progress-optimization-20250129.md  progress-test-analysis-20250130.md  progress.md  session_summary_20250130.md  session_summary_20250525.md  session_summary_20250526_v2.md  timeline_2025-06-07.md  timeline_2025-06-07_completion.md  v01-restoration-analysis.md  v01_mode_refactoring_summary.md
scitex-paper/: README.md  example_scitex.yaml  scitex.py  scitex_enhanced.py  scitex_scientific.py
scripts/: analyze_scaling_issue.py  benchmark_vs_tensorpac.py  check_tensorpac_correlation.py  compare_mi_with_tensorpac.py  comprehensive_performance_comparison.py  convert_gifs_to_png.py  direct_mi_comparison.py  fair_tensorpac_comparison.py  gpu_scaling_test.py  gradient_testing_summary.py  integrate_memory_manager.py  massive_batch_test.py  memory_debug.py  precise_initialization_timing.py  precise_timing_breakdown.py  profile_performance.py  project_status_summary.py  quick_performance_check.py  realistic_batch_test.py  realistic_data_comparison.py  realistic_eeg_comparison.py  (+35 more)
(+766 files in other folders)
