[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpac"
version = "0.1.0"
authors = [
  { name="Yusuke Watanabe", email="ywatanabe@alumni.u-tokyo.ac.jp" },
]
description = "GPU-Accelerated Phase-Amplitude Coupling calculation using PyTorch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "torchaudio>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "matplotlib>=3.0",
    "psutil>=5.0",
    "tensorpac>=0.6.0",
    "mngs",
    "gputil>=1.0",
    "mne>=0.23",
]

[project.urls]
"Homepage" = "https://github.com/ywatanabe1989/gPAC"
"Repository" = "https://github.com/ywatanabe1989/gPAC"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gpac", "gpac._Filters"]